--- a/index.html
+++ b/index.html
@@ -14,5 +14,12 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+  <p id="clientId"></p>
+  
+  <script type="text/javascript">
+    document.getElementById['clientId'].innerHTML = '12345';
+    
+  </script>
+  
 </body>
 </html>
