--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <p id="clientId"></p>
   
   <script type="text/javascript">
-    document.getElementById['clientId'].innerHTML = '12345';
+    var elem = document.getElementById("cliendId");
+    elem.innerHTML = "12345";
     
   </script>
   
