--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <p id="clientId"></p>
   
   <script type="text/javascript">
-    var elem = document.getElementById("cliendId");
+    var elem = document.getElementById("clientId");
     elem.innerHTML = "12345";
     
   </script>
