--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
   <script type="text/javascript">
     var elem = document.getElementById("clientId");
-    elem.innerHTML = "12345";
+    elem.innerHTML = ga.getAll()[0].get('clientId');
     
   </script>
   
