--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p>I'm hosted with GitHub Pages.</p>
   <p id="clientId"></p>
   
-  <script type="text/javascript">
+  <script async type="text/javascript">
     var elem = document.getElementById("clientId");
     elem.innerHTML = ga.getAll()[0].get('clientId');
     
