--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
   <script async type="text/javascript">
     var elem = document.getElementById("clientId");
-    elem.innerHTML = ga.getAll()[0].get('clientId');
+    console.log(ga.getAll());
     
   </script>
   
