--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
   <script async type="text/javascript">
     var elem = document.getElementById("clientId");
-    console.log(ga.getAll());
+    console.log(gtag.getAll());
     
   </script>
   
